# AutoSourceID-Light

./: ASID-L.py  LOAD_IMAGES.py  LOAD_UNET.py  LaplacianOfGaussian.py  MAIN.py  README.md  RUN_UNET_fromScratch.py  Training_Test_ValidationSet.py  U_Net.py  setup.cfg
RESULTS/: coordinates.txt
src/ASID_L/: ASID_L.py  LOAD_IMAGES.py  LOAD_UNET.py  RUN_UNET_fromScratch.py
src/ASID_L.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ASID_L_V4.egg-info/: PKG-INFO  SOURCES.txt
