[metadata]
name = ConTEST
version = 0.0.1
author = Fiorenzo Stoppa
author_email = fiorenzostoppa@eyahoo.it
description = Consistency test
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FiorenST/ConTEST
project_urls =
    Bug Tracker = https://github.com/FiorenST/ConTEST/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
