[metadata]
name = ASID_L_V4
version = 0.0.3
author = Fiorenzo Stoppa
author_email = fiorenzostoppa@yahoo.it
description = Fast optical source localization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FiorenST/AutoSourceID-Light
project_urls =
    Bug Tracker = https://github.com/FiorenST/AutoSourceID-Light/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
